# my-package

./: README.md  buildspec.yml  pyproject.toml
my_package.egg-info/: PKG-INFO  SOURCES.txt
